--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">Android Unit Test Techniques</string>
+    <string name="title_activity_sub">SubActivity</string>
 </resources>
